Create  adapter class to make the list

--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -13,6 +13,7 @@
         android:text="8.9">
     </TextView>
      <TextView
+         android:id="@+id/locaion"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
